# raytracer

./: .gitignore  .lua-format  Cargo.toml  a  scene.ron
lua/raytracer/: camera.lua  color.lua  direction.lua  point.lua  scene.lua
lua/raytracer/materials/: dielectric.lua  isotropic.lua  lambertian.lua  light.lua  metal.lua  utils.lua
lua/raytracer/shapes/: cuboid.lua  list.lua  medium.lua  plane.lua  rect.lua  rotate.lua  sphere.lua  translate.lua
scenes/: 1.ron  2.lua  2.py  3.ron  4.ron  5.lua  teapot.ron  teapot_bezier.ron
some_images/: 1.ppm  2.ppm  3.ppm
src/: aabb.rs  args.rs  bezier.rs  camera.rs  checkerboard.rs  color.rs  constants.rs  de.rs  drawable.rs  hittable.rs  main.rs  materials.rs  point3.rs  random.rs  ray.rs  raytracer.rs  rng.rs  shapes.rs  vec3.rs  viewport.rs
src/de/: camera.rs  color.rs  material.rs  mod.rs  obj.rs  scene.rs  shape.rs  var.rs  vec.rs
src/materials/: dielectric.rs  diffuse_light.rs  isotropic.rs  lambertian.rs  material.rs  metal.rs  mixed_material.rs  mod.rs
src/math/: color_stuff.rs  mod.rs  vec3.rs
src/shapes/: bvh_node.rs  constant_medium.rs  cuboid.rs  hittable_list.rs  mod.rs  plane.rs  rotate_y.rs  sphere.rs  translate.rs  triangle.rs  unhittable.rs  xy_rect.rs  xz_rect.rs  yz_rect.rs
