[package]
name = "raytracer"
version = "0.1.0"
authors = ["Johan-Mi <johanmi@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_more = "0.99.11"
rand = "0.8.3"
rayon = "1.5.0"
ron = "0.6.4"
serde = { version = "1.0.123", features = ["derive"] }
structopt = "0.3.21"

[profile.release]
panic = "abort"
lto = true
