[package]
name = "raytracer"
version = "0.1.0"
authors = ["Johan-Mi <johanmi@protonmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bumpalo = "3.6.0"
rand = "0.8.3"
rayon = "1.5.0"
ron = "0.6.4"
serde = { version = "1.0.123", features = ["derive"] }
structopt = "0.3.21"
vec3 = { git = "https://github.com/Johan-Mi/vec3" }

[profile.release]
panic = "abort"
lto = true
