[package]
name = "raytracer"
version = "0.1.0"
authors = ["Johan-Mi <johanmi@protonmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bumpalo = "3.12.0"
rand = "0.8.5"
rayon = "1.7.0"
ron = "0.8.0"
serde = { version = "1.0.160", features = ["derive"] }
clap = { version = "4.2.2", default-features = false, features = ["std", "derive"] }
glam = { version = "0.23.0", features = ["fast-math"] }

[profile.release]
panic = "abort"
lto = true
